<resources>
    <string name="app_name">10119907UTS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theodorus_doni">Theodorus Doni</string>
    <string name="profile_bio">I am a Programmer, started learning Programming four years ago, and have experience creating modular and maintainable code in different programming languages such as c#, php and kotlin also very passionate to learn new things.</string>
    <string name="friends">Friends</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="about">About</string>
    <string name="get_started">Get Started</string>
    <string name="back">Back</string>
    <string name="copyright_2022">Copyright ©2022</string>
    <string name="td">TD</string>

    <string-array name="txt_view_landing_background">
        <item>&lt;/></item>
        <item>TD</item>
        <item>~></item>
    </string-array>

    <string-array name="txt_view_landing_tittle">
        <item>Welcome</item>
        <item>Get Ready</item>
        <item>Let\'s Start</item>
    </string-array>

    <string-array name="txt_view_landing_desc">
        <item>Glad you\'re here to know more about me.</item>
        <item>You\'ll know more about my profile, favorite, and daily routine information.</item>
        <item>I hope we can get to know each other better.</item>
    </string-array>

    <string-array name="txt_view_artist_name">
        <item>Aimer</item>
        <item>Bea Miller</item>
        <item>IU</item>
        <item>Yama</item>
        <item>Yvette Young</item>
    </string-array>

    <string-array name="txt_view_song_name">
        <item>Twinkle Twinkle Little Star</item>
        <item>Playground</item>
        <item>Celebrity</item>
        <item>Oz</item>
        <item>A Map, A String, A Light</item>
    </string-array>

    <string-array name="txt_view_activity_hour">
        <item>6 AM</item>
        <item>8 AM</item>
        <item>5 PM</item>
        <item>7 PM</item>
        <item>9 PM</item>
        <item>11 PM</item>
    </string-array>

    <string-array name="txt_view_activity_name">
        <item>Wake up</item>
        <item>Work</item>
        <item>Short Break</item>
        <item>Study</item>
        <item>Refreshing</item>
        <item>Sleep</item>
    </string-array>

    <string-array name="txt_view_friend_name">
        <item>Abraham</item>
        <item>Aris</item>
        <item>Fauzan</item>
        <item>Edwin</item>
        <item>Riko</item>
    </string-array>

</resources>