<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/navy"
    android:padding="@dimen/space_normal_100"
    tools:context=".presentation.dialog.AboutDialogFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/img_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/td"
        android:textColor="@color/crystal_blue"
        android:textSize="@dimen/txt_large_150"
        app:fontFamily="@font/rubik_glitch_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_normal_125"
        android:textStyle="bold"
        app:fontFamily="@font/chakra_petch_regular"
        app:layout_constraintBottom_toTopOf="@id/txt_view_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_view_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_view_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_mini_40"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_mini_120"
        app:fontFamily="@font/chakra_petch_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_app_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_view_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_mini_40"
        android:text="@string/copyright_2022"
        android:textColor="@android:color/white"
        app:fontFamily="@font/chakra_petch_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_version" />

</androidx.constraintlayout.widget.ConstraintLayout>